--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "dev": "ng build --watch --base-href ./index.html?/",
-    "dev:ext": "tsc-watch ../extension-src/extension.ts --outDir ../extension --compiler typescript/bin/tsc -m ES6"
+    "build:stars": "ng build --project stars --prod --output-hashing=none && npm run package:stars",
+    "package:stars": "node projects/stars/build.js"
   },
   "private": true,
   "dependencies": {
@@ -18,6 +19,7 @@
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/elements": "^7.2.15",
     "@angular/forms": "~7.2.0",
     "@angular/material": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
@@ -26,7 +28,9 @@
     "@ngrx/effects": "^8.0.1",
     "@ngrx/store": "^8.0.1",
     "@types/chrome": "0.0.88",
+    "@webcomponents/custom-elements": "^1.3.0",
     "core-js": "^2.5.4",
+    "document-register-element": "^1.7.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
@@ -40,6 +44,8 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "concat": "^1.0.3",
+    "fs-extra": "^8.1.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
