--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,39 +7,37 @@
     "build": "ng build",
     "build:popup": "ng build --project=popup --base-href ./index.html?/ --prod",
     "start:cabinet": "ng build --project=cabinet --source-map --watch --base-href ./index.html?/",
-    "start:popup": "ng build --project=popup --watch --base-href ./index.html?/",
+    "start:popup": "ng build --project=popup --source-map --watch --base-href ./index.html?/",
     "start:ts": "webpack --mode development --config webpack.config.js -w",
     "dev": "ng build --watch --base-href ./index.html?/"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.14",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/elements": "^8.2.14",
-    "@angular/forms": "^8.2.14",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
-    "@ngrx/effects": "^8.6.0",
-    "@ngrx/store": "^8.6.0",
-    "@types/chrome": "0.0.89",
+    "@angular/animations": "9.1.13",
+    "@angular/cdk": "9.2.4",
+    "@angular/common": "9.1.13",
+    "@angular/compiler": "9.1.13",
+    "@angular/core": "9.1.13",
+    "@angular/elements": "9.1.13",
+    "@angular/forms": "9.1.13",
+    "@angular/material": "9.2.4",
+    "@angular/platform-browser": "9.1.13",
+    "@angular/platform-browser-dynamic": "9.1.13",
+    "@angular/router": "9.1.13",
+    "@types/chrome": "0.0.163",
     "@webcomponents/custom-elements": "^1.4.0",
     "core-js": "^3.6.4",
     "document-register-element": "^1.7.2",
     "ng-lazyload-image": "^6.1.0",
     "rxjs": "^6.5.4",
-    "tslib": "^1.11.1",
-    "zone.js": "~0.10.2"
+    "tslib": "1.10.0",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.25",
-    "@angular/cli": "^8.3.25",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
+    "@angular/cli": "9.1.13",
+    "@angular/compiler-cli": "9.1.13",
+    "@angular/language-service": "9.1.12",
     "@types/jasmine": "^3.4.6",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^12.7.12",
@@ -57,7 +55,7 @@
     "ts-node": "~8.4.1",
     "tsc-watch": "^4.2.3",
     "tslint": "^5.20.1",
-    "typescript": "~3.4.0",
+    "typescript": "3.8.3",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
     "ts-loader": "8.3.0",
