--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,38 +6,36 @@
     "start": "ng serve",
     "build": "ng build",
     "build:popup": "ng build --project=popup --base-href ./index.html?/ --prod",
-    "start:cabinet": "ng build --project=cabinet --source-map --watch --base-href ./index.html?/",
+    "start:cabinet": "ng build --project=cabinet --source-map=true --watch --base-href ./index.html?/",
     "start:popup": "ng build --project=popup --source-map --watch --base-href ./index.html?/",
     "start:ts": "webpack --mode development --config webpack.config.js -w",
     "dev": "ng build --watch --base-href ./index.html?/"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.1.13",
-    "@angular/cdk": "9.2.4",
-    "@angular/common": "9.1.13",
-    "@angular/compiler": "9.1.13",
-    "@angular/core": "9.1.13",
-    "@angular/elements": "9.1.13",
-    "@angular/forms": "9.1.13",
-    "@angular/material": "9.2.4",
-    "@angular/platform-browser": "9.1.13",
-    "@angular/platform-browser-dynamic": "9.1.13",
-    "@angular/router": "9.1.13",
+    "@angular/animations": "12.2.13",
+    "@angular/cdk": "12.2.12",
+    "@angular/common": "12.2.13",
+    "@angular/compiler": "12.2.13",
+    "@angular/core": "12.2.13",
+    "@angular/elements": "12.2.13",
+    "@angular/forms": "12.2.13",
+    "@angular/material": "12.2.12",
+    "@angular/platform-browser": "12.2.13",
+    "@angular/platform-browser-dynamic": "12.2.13",
+    "@angular/router": "12.2.13",
     "@types/chrome": "0.0.163",
-    "@webcomponents/custom-elements": "^1.4.0",
-    "core-js": "^3.6.4",
-    "document-register-element": "^1.7.2",
-    "ng-lazyload-image": "^6.1.0",
-    "rxjs": "^6.5.4",
-    "tslib": "1.10.0",
-    "zone.js": "~0.10.3"
+    "core-js": "3.19.1",
+    "ng-lazyload-image": "9.1.0",
+    "rxjs": "6.6.7",
+    "tslib": "2.1.0",
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.25",
-    "@angular/cli": "9.1.13",
-    "@angular/compiler-cli": "9.1.13",
-    "@angular/language-service": "9.1.12",
+    "@angular-devkit/build-angular": "0.1102.15",
+    "@angular/cli": "12.2.13",
+    "@angular/compiler-cli": "12.2.13",
+    "@angular/language-service": "12.2.13",
     "@types/jasmine": "^3.4.6",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^12.7.12",
@@ -52,13 +50,14 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.2",
     "protractor": "^5.4.3",
-    "ts-node": "~8.4.1",
-    "tsc-watch": "^4.2.3",
-    "tslint": "^5.20.1",
-    "typescript": "3.8.3",
+    "ts-node": "9.1.1",
+    "tsc-watch": "4.4.0",
+    "tslint": "6.1.2",
+    "typescript": "4.3.5",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
-    "ts-loader": "8.3.0",
+    "ts-loader": "6.2.2",
+    "rxjs-debug": "1.3.0",
     "tsconfig-paths-webpack-plugin": "^3.5.1"
   }
 }
