--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "start:cabinet": "ng build --project=cabinet --source-map=true --watch --base-href ./index.html?/",
     "start:popup": "ng build --project=popup --source-map --watch --base-href ./index.html?/",
     "start:ts": "webpack --mode development --config webpack.config.js -w",
-    "dev": "ng build --watch --base-href ./index.html?/"
+    "storybook": "start-storybook -p 6006"
   },
   "private": true,
   "dependencies": {
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "12.2.13",
     "@angular/platform-browser-dynamic": "12.2.13",
     "@angular/router": "12.2.13",
+    "@ngneat/until-destroy": "^8.1.4",
     "@types/chrome": "0.0.163",
     "core-js": "3.19.1",
     "ng-lazyload-image": "9.1.0",
@@ -58,6 +59,10 @@
     "webpack-cli": "^3.3.12",
     "ts-loader": "6.2.2",
     "rxjs-debug": "1.3.0",
-    "tsconfig-paths-webpack-plugin": "^3.5.1"
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
+    "@storybook/addon-actions": "^6.3.0",
+    "@storybook/addon-essentials": "^6.3.0",
+    "@storybook/addon-links": "^6.3.0",
+    "@storybook/angular": "^6.3.0"
   }
 }
