--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -36,7 +36,7 @@
             "production": {
               "fileReplacements": [],
               "optimization": true,
-              "outputHashing": "all",
+              "outputHashing": "none",
               "sourceMap": false,
               "extractCss": true,
               "namedChunks": false,
@@ -118,7 +118,7 @@
             "production": {
               "fileReplacements": [],
               "optimization": true,
-              "outputHashing": "all",
+              "outputHashing": "none",
               "sourceMap": false,
               "extractCss": true,
               "namedChunks": false,
