--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,7 @@
 /tmp
 /out-tsc
 /extension
-# Only exists if Bazel was run
-/bazel-out
+extension.crx
 
 # dependencies
 /frontend/node_modules
@@ -16,6 +15,9 @@
 # profiling files
 chrome-profiler-events.json
 speed-measure-plugin.json
+
+# secure
+extension.pem
 
 # IDEs and editors
 /.idea
