--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,10 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build:cabinet": "ng build --project=cabinet --base-href ./index.html?/ --prod",
     "build:popup": "ng build --project=popup --base-href ./index.html?/ --prod",
+    "build:ts": "webpack --mode production --config webpack.config.js",
+    "build": "npm run build:ts & npm run build:cabinet & npm run build:popup",
     "start:cabinet": "ng build --project=cabinet --source-map=true --watch --base-href ./index.html?/",
     "start:popup": "ng build --project=popup --source-map --watch --base-href ./index.html?/",
     "start:ts": "webpack --mode development --config webpack.config.js -w",
@@ -33,7 +35,7 @@
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1102.15",
+    "@angular-devkit/build-angular": "12.2.13",
     "@angular/cli": "12.2.13",
     "@angular/compiler-cli": "12.2.13",
     "@angular/language-service": "12.2.13",
