Update nestjs and typescript version

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,6 +3,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "declaration": true,
+    "allowJs": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
