--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "copy": "copyfiles -f ./projects/extension/* ../extension",
     "start:cabinet": "ng build --project=cabinet --source-map=true --watch --base-href ./index.html?/",
     "start:popup": "ng build --project=popup --source-map=true --watch --base-href ./index.html?/",
-    "start:page": "ng build --project=page=true --source-map --watch --outputHashing none --single-bundle",
+    "start:page": "ng build --project=page=true --source-map --watch --output-hashing none",
     "start:ts": "webpack --mode development --config webpack.config.js -w",
     "storybook": "start-storybook -p 6006"
   },
@@ -31,6 +31,7 @@
     "@ngneat/until-destroy": "^8.1.4",
     "@types/chrome": "0.0.163",
     "core-js": "3.19.1",
+    "document-register-element": "^1.7.2",
     "ng-lazyload-image": "9.1.0",
     "rxjs": "6.6.7",
     "tslib": "2.1.0",
@@ -41,6 +42,10 @@
     "@angular/cli": "12.2.13",
     "@angular/compiler-cli": "12.2.13",
     "@angular/language-service": "12.2.13",
+    "@storybook/addon-actions": "^6.3.0",
+    "@storybook/addon-essentials": "^6.3.0",
+    "@storybook/addon-links": "^6.3.0",
+    "@storybook/angular": "^6.3.0",
     "@types/jasmine": "^3.4.6",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^12.7.12",
@@ -55,8 +60,11 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.2",
     "protractor": "^5.4.3",
+    "rxjs-debug": "1.3.0",
+    "ts-loader": "6.2.2",
     "ts-node": "9.1.1",
     "tsc-watch": "4.4.0",
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
     "tslint": "6.1.2",
     "typescript": "4.3.5",
     "webpack": "^4.46.0",
@@ -64,10 +72,6 @@
     "ts-loader": "6.2.2",
     "rxjs-debug": "1.3.0",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
-    "@storybook/addon-actions": "^6.3.0",
-    "@storybook/addon-essentials": "^6.3.0",
-    "@storybook/addon-links": "^6.3.0",
-    "@storybook/angular": "^6.3.0",
     "copyfiles": "^2.4.1"
   }
 }
