--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "build:cabinet": "ng build --project=cabinet --base-href ./index.html?/ --prod --source-map=false",
     "build:popup": "ng build --project=popup --base-href ./index.html?/ --prod --source-map=false",
     "build:ts": "webpack --mode production --config webpack.config.js --source-map=false",
-    "build": "npm run build:ts && npm run build:cabinet && npm run build:popup",
+    "build": "npm run build:ts && npm run build:cabinet && npm run build:popup && npm run copy",
+    "copy": "copyfiles -f ./projects/extension/* ../extension",
     "start:cabinet": "ng build --project=cabinet --source-map=true --watch --base-href ./index.html?/",
     "start:popup": "ng build --project=popup --source-map=true --watch --base-href ./index.html?/",
     "start:ts": "webpack --mode development --config webpack.config.js -w",
@@ -65,6 +66,7 @@
     "@storybook/addon-actions": "^6.3.0",
     "@storybook/addon-essentials": "^6.3.0",
     "@storybook/addon-links": "^6.3.0",
-    "@storybook/angular": "^6.3.0"
+    "@storybook/angular": "^6.3.0",
+    "copyfiles": "^2.4.1"
   }
 }
