--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,9 @@
     "@angular/platform-browser-dynamic": "12.2.13",
     "@angular/router": "12.2.13",
     "@ngneat/until-destroy": "^8.1.4",
-    "@types/chrome": "0.0.164",
+    "@sentry/angular": "^6.16.1",
+    "@sentry/tracing": "^6.16.1",
+    "@types/chrome": "0.0.169",
     "core-js": "3.19.1",
     "ng-lazyload-image": "9.1.0",
     "rxjs": "6.6.7",
@@ -65,7 +67,7 @@
     "tsconfig-paths-webpack-plugin": "^3.5.1",
     "tslint": "6.1.2",
     "typescript": "4.3.5",
-    "webpack": "^4.46.0",
+    "webpack": "5.29.0",
     "webpack-cli": "^3.3.12",
     "copyfiles": "^2.4.1"
   }
