--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "@sentry/tracing": "^6.16.1",
     "@types/chrome": "0.0.169",
     "core-js": "3.19.1",
+    "firebase": "^9.6.1",
     "ng-lazyload-image": "9.1.0",
     "rxjs": "6.6.7",
     "tslib": "2.1.0",
