--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -23,6 +23,9 @@
       "@server/api/*": [
         "../server/src/api/*"
       ],
+      "@server/models": [
+        "../server/src/models"
+      ],
       "@server/models/*": [
         "../server/src/models/*"
       ],
