--- a/server/package.json
+++ b/server/package.json
@@ -24,19 +24,40 @@
     "@nestjs/common": "^8.2.2",
     "@nestjs/core": "^8.2.2",
     "@nestjs/microservices": "^8.2.2",
+    "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.2.2",
+    "@nestjs/schedule": "^1.0.2",
     "@nestjs/swagger": "^5.1.5",
+    "@nestjs/typeorm": "8.0.2",
     "@nestjs/websockets": "^8.2.2",
+    "@sentry/integrations": "^6.16.0",
+    "@sentry/node": "^6.16.0",
+    "@sentry/tracing": "^6.16.0",
+    "add": "^2.0.6",
+    "class-transformer": "^0.5.1",
+    "cryptors": "^1.1.1",
+    "date-fns": "^2.28.0",
+    "firebase-admin": "^10.0.1",
+    "mysql": "^2.17.1",
+    "nodemailer": "^6.7.2",
+    "passport": "^0.5.2",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "0.1.13",
     "rimraf": "2.6.3",
-    "rxjs": "6.4.0",
-    "swagger-ui-express": "^4.0.6"
+    "rxjs": "7.2.0",
+    "sha1": "^1.1.1",
+    "shikimori-api-node": "^1.0.3",
+    "swagger-ui-express": "^4.0.6",
+    "typeorm": "^0.2.39"
   },
   "devDependencies": {
     "@nestjs/testing": "6.1.1",
+    "@types/cron": "^1.7.3",
     "@types/express": "4.16.1",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.4",
+    "@types/passport-local": "^1.0.34",
     "@types/supertest": "2.0.7",
     "concurrently": "^4.1.0",
     "jest": "24.7.1",
