--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "build:ts": "webpack --config webpack.config.js --mode production --devtool=false",
     "build": "npm run build:ts && npm run build:cabinet && npm run build:popup && npm run copy",
     "copy": "copyfiles -f ./projects/extension/* ../extension",
-    "start:cabinet": "ng build --project=cabinet --source-map=true --watch --base-href ./index.html?/",
+    "start:cabinet": "ng build --project=cabinet --watch --base-href ./index.html?/ --source-map=true",
     "start:popup": "ng build --project=popup --source-map=true --watch --base-href ./index.html?/",
     "start:ts": "webpack --mode development --config webpack.config.js -w",
     "storybook": "start-storybook -p 6006"
@@ -43,15 +43,19 @@
     "@angular/cli": "12.2.13",
     "@angular/compiler-cli": "12.2.13",
     "@angular/language-service": "12.2.13",
-    "@storybook/addon-actions": "^6.3.0",
-    "@storybook/addon-essentials": "^6.3.0",
-    "@storybook/addon-links": "^6.3.0",
-    "@storybook/angular": "^6.3.0",
+    "@storybook/addon-essentials": "6.4.0-alpha.28",
+    "@storybook/addon-knobs": "6.3.0",
+    "@storybook/addon-storyshots": "6.4.0-alpha.28",
+    "@storybook/addons": "6.4.0-alpha.28",
+    "@storybook/angular": "6.4.0-alpha.28",
+    "@storybook/builder-webpack5": "6.4.0-alpha.28",
+    "@storybook/manager-webpack5": "6.4.0-alpha.28",
     "@types/jasmine": "^3.4.6",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^12.7.12",
+    "@types/node": "^12.20.42",
     "codelyzer": "~5.1.2",
     "concat": "^1.0.3",
+    "copyfiles": "^2.4.1",
     "fs-extra": "^8.1.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -60,6 +64,7 @@
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.2",
+    "ngx-build-plus": "^13.0.1",
     "protractor": "^5.4.3",
     "rxjs-debug": "1.3.0",
     "ts-loader": "6.2.2",
@@ -69,7 +74,6 @@
     "tslint": "6.1.2",
     "typescript": "4.3.5",
     "webpack": "4.46.0",
-    "webpack-cli": "^3.3.12",
-    "copyfiles": "^2.4.1"
+    "webpack-cli": "^3.3.12"
   }
 }
