--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,13 @@
   "description": "Nest TypeScript starter repository",
   "license": "MIT",
   "scripts": {
-    "build": "tsc -p tsconfig.build.json",
+    "build": "nest build",
     "postbuild": "node src/postbuild.js",
     "build:prod": "npm run build && npm run postbuild",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start:base": "ts-node -r tsconfig-paths/register src/main.ts",
-    "start": "concurrently --handle-input \"wait-on dist/main.js && nodemon\" \"tsc -w -p tsconfig.build.json\" ",
-    "start:debug": "nodemon --config nodemon-debug.json",
-    "prestart:prod": "rimraf dist && npm run build",
+    "start": "nest start --debug --watch",
     "start:prod": "node dist/main.js",
-    "lint": "tslint -p tsconfig.json -c tslint.json",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -21,55 +18,56 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.2.2",
-    "@nestjs/core": "^8.2.2",
-    "@nestjs/microservices": "^8.2.2",
-    "@nestjs/passport": "^8.0.1",
-    "@nestjs/platform-express": "^8.2.2",
-    "@nestjs/schedule": "^1.0.2",
-    "@nestjs/swagger": "^5.1.5",
-    "@nestjs/typeorm": "8.0.2",
-    "@nestjs/websockets": "^8.2.2",
-    "@sentry/integrations": "^6.16.0",
-    "@sentry/node": "^6.16.0",
-    "@sentry/tracing": "^6.16.0",
-    "add": "^2.0.6",
+    "@nestjs/axios": "1.0.1",
+    "@nestjs/common": "9.2.1",
+    "@nestjs/core": "9.2.1",
+    "@nestjs/passport": "9.0.0",
+    "@nestjs/platform-express": "9.0.11",
+    "@nestjs/schedule": "2.1.0",
+    "@nestjs/swagger": "6.1.4",
+    "@nestjs/typeorm": "9.0.1",
+    "@sentry/integrations": "6.19.7",
+    "@sentry/node": "6.19.7",
+    "@sentry/tracing": "6.19.7",
     "class-transformer": "^0.5.1",
-    "cryptors": "^1.1.1",
     "date-fns": "^2.28.0",
-    "firebase-admin": "^10.0.1",
-    "mysql": "^2.17.1",
+    "deepmerge": "^4.2.2",
+    "firebase-admin": "11.4.1",
+    "lodash": "^4.17.21",
+    "mysql": "2.3.2",
     "nodemailer": "^6.7.2",
-    "passport": "^0.5.2",
-    "passport-http-bearer": "^1.0.1",
-    "passport-local": "^1.0.0",
+    "passport": "0.6.0",
+    "passport-http-bearer": "1.0.1",
+    "passport-local": "1.0.0",
     "reflect-metadata": "0.1.13",
-    "rimraf": "2.6.3",
     "rxjs": "7.2.0",
     "sha1": "^1.1.1",
-    "shikimori-api-node": "^1.0.3",
-    "swagger-ui-express": "^4.0.6",
-    "typeorm": "^0.2.39"
+    "swagger-ui-express": "4.6.0",
+    "typeorm": "^0.3.11"
   },
   "devDependencies": {
-    "@nestjs/testing": "6.1.1",
-    "@types/cron": "^1.7.3",
-    "@types/express": "4.16.1",
-    "@types/jest": "24.0.11",
-    "@types/node": "11.13.4",
+    "@nestjs/testing": "9.0.1",
+    "@types/cron": "^2.0.0",
+    "@types/express": "4.17.13",
+    "@types/jest": "29.2.5",
+    "@types/node": "18.11.18",
     "@types/passport-local": "^1.0.34",
-    "@types/supertest": "2.0.7",
+    "@types/supertest": "2.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "concurrently": "^4.1.0",
-    "jest": "24.7.1",
-    "nodemon": "1.18.11",
-    "prettier": "1.17.0",
-    "supertest": "4.0.2",
-    "ts-jest": "24.0.2",
-    "ts-node": "8.1.0",
-    "tsconfig-paths": "3.8.0",
-    "tslint": "5.16.0",
-    "typescript": "4.3.5",
-    "wait-on": "^3.2.0"
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "29.3.1",
+    "prettier": "2.3.2",
+    "source-map-support": "^0.5.20",
+    "supertest": "6.3.3",
+    "ts-jest": "29.0.3",
+    "ts-loader": "^9.2.3",
+    "ts-node": "10.9.1",
+    "tsconfig-paths": "4.1.2",
+    "typescript": "4.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -87,5 +85,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "resolutions": {
+    "@types/express": "4.17.13"
   }
 }
